--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - staging
 
 jobs:
-  retraining_model:
+  retraining_ai_model:
     runs-on: ubuntu-latest
     container: docker://dvcorg/cml:latest
     env:
@@ -37,3 +37,23 @@ jobs:
           cml-publish feature_importance.png --md >> report.md
           
           cml-send-comment report.md
+
+  build_docker_image:
+    needs: retraining_ai_model
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check the repo
+        uses: actions/checkout@v2
+
+      - name: Login to dockerhub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build docker image
+        run: docker build -t jeanrabbat/deploy-breast-cancer:dev .
+
+      - name: Docker push to Dockerhub
+        run: docker push jeanrabbat/deploy-breast-cancer:dev
